# BUAA-CO

./: README.md  p0_log.md  p3_log.md  p4_log.md  数据通路表及构建过程.xlsx
1_CRC校验码/: CRC.circ  CRC_log.md
2_GRF/: GRF_log.md  grf.circ
3_logisim导航/: navigation.circ  navigation_log.md
4_FSM_regular/: FSM.circ  FSM_log.md
5_ftoi/: ftoi.circ  ftoi_log.md
Test_zby/: PyTest.py  README.md  mips1.asm  setup.py  test.py
Test_zby/result/: result.txt  tmp.txt
auto_test/: README.MD  auto_test.py
blog/: 状态编码分享.md
p1/: p1_log.md
p1/1_splitter/: splitter.md
p1/2_ALU/: ALU_log.md
p1/3_EXT/: EXT_log.md
p1/4_gray/: gray_log.md
p1/5_expr/: expr_log.md
p1/6_BlockChecker/: BlockChecker_log.md
p2/: CMakeLists.txt  P2_log.md  常见宏定义.asm
p2/1_matrix/: matrix.asm  matrix.cpp  matrix_log.md
p2/2_judge/: judge.asm  judge.cpp  judge_log.md
p2/3_conv/: conv.asm  conv.cpp
p2/4_full/: full.asm  full_log.md
p2/5_maze/: maze.asm  maze.cpp  maze_gf.cpp  maze_log.md
p2/6_factorial/: factorial.asm  factorial.cpp  factorial_log.md
p2/blog/: mips常用宏定义.md  mips汇编翻译C代码典例.md
test/: p4_testcode.asm
test/auto_test/: GenTestCode.py  MarsRunner.py  README.MD  TestMain.py  fc.py
version1/: MIPS-CPU.circ
version1/MIPS-CPU/: ALU.stx  ALU.xst  DM.stx  DM.xst  EXT.stx  EXT.xst  IM.stx  IM.v  IM.xst  InstructionSplitter.prj  InstructionSplitter.stx  InstructionSplitter.xst  MIPS-CPU.gise  MIPS-CPU.xise  MUX.stx  MUX.xst  (+24 more)
version2/: MIPS-CPU.circ  README.MD
version3/: MIPS-CPU.circ  READ.MD  README.MD
有限状态机/: note.md
测试程序/: AllCoverTest.asm  p3_testcode.asm  weak1.txt
(+416 files in other folders)
